# NLP-Intelligent-HR-Onboarding-Assistant

./: PROJECT_DANJOU_MERIC_VON-SIEMES.ipynb  README.md  projet.ipynb  pyproject.toml
data/: employés.json  entreprise.md
