[project]
name = "nlp-intelligent-hr-onboarding-assistant-with-rag-and-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.11",
    "langchain-mistralai>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "pandas>=3.0.1",
    "tiktoken>=0.12.0",
]
