[project]
name = "nlp-intelligent-hr-onboarding-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.9.0",
    "langchain>=1.2.12",
    "langchain-mistralai>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "pandas>=3.0.1",
    "tiktoken>=0.12.0",
]
